@@ -235,7 +235,10 @@
 				return null;
 			}
 			// Setup the anchor tag
-			var $link = $('<a />').attr( 'href', href ).text( text );
+			var $link = $( '<a></a>' ).attr( 'href', href ).text( text );
+			if ( tooltip ) {
+				$link.attr( 'title', tooltip );
+			}
 
 			// Some skins don't have any portlets
 			// just add it to the bottom of their 'sidebar' element as a fallback
@@ -261,11 +264,11 @@
 				if ($ul.length === 0) {
 					// If there's no <div> inside, append it to the portlet directly
 					if ($portlet.find( 'div' ).length === 0) {
-						$portlet.append( '<ul/>' );
+						$portlet.append( '<ul></ul>' );
 					} else {
 						// otherwise if there's a div (such as div.body or div.pBody)
 						// append the <ul> to last (most likely only) div
-						$portlet.find( 'div' ).eq( -1 ).append( '<ul/>' );
+						$portlet.find( 'div' ).eq( -1 ).append( '<ul></ul>' );
 					}
 					// Select the created element
 					$ul = $portlet.find( 'ul' ).eq( 0 );
@@ -280,7 +283,7 @@
 
 				// Wrap the anchor tag in a <span> and create a list item for it
 				// and back up the selector to the list item
-				var $item = $link.wrap( '<li><span /></li>' ).parent().parent();
+				var $item = $link.wrap( '<li><span></span></li>' ).parent().parent();
 
 				// Implement the properties passed to the function
 				if ( id ) {
